started loader. Advanced on navmenu.

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Bungee&family=Sono:wght@200;300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/968d4dd58f.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <app-root></app-root>
